Fix numeric alignment in data tables.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -369,6 +369,7 @@ gridster .gridster-row {
   align-items: right !important;
   white-space: normal;
   justify-content: flex-end;
+  align-items: center;
 }
 
 .pfm-datagrid-text-underline{
